--- a/src/TechLanches/TechLanches.API/Dockerfile
+++ b/src/TechLanches/TechLanches.API/Dockerfile
@@ -1,19 +1,17 @@
-#See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
 FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
 EXPOSE 80
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
-COPY ["TechLanches.API/TechLanches.API.csproj", "TechLanches.API/"]
-RUN dotnet restore "TechLanches.API/TechLanches.API.csproj"
+COPY ["TechLanches.API.csproj", "."]
+RUN dotnet restore "./TechLanches.API.csproj"
 COPY . .
-WORKDIR "/src/TechLanches.API"
+WORKDIR "/src/."
 RUN dotnet build "TechLanches.API.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "TechLanches.API.csproj" -c Release -o /app/publish
+RUN dotnet publish "TechLanches.API.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
