--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,11 @@
 services:
   webapi:
     build:
-        context: .
-        dockerfile: Dockerfile
+        context: ./src/TechLanches/
+        dockerfile: /TechLanches.API/Dockerfile
     container_name: api-dotnet6
     ports:
-      - "5000:80"
+      - "5050:80"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ConnectionStrings__DefaultConnection=Server=db;Database=techlanches;User=sa;Password=Qwert@12345
