--- a/src/TechLanches/TechLanches.API/appsettings.json
+++ b/src/TechLanches/TechLanches.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=db;Database=techlanches;User=sa;Password=Qwert@12345"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
