--- a/src/TechLanches/TechLanches.API/appsettings.Development.json
+++ b/src/TechLanches/TechLanches.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=db;Database=techlanches;User=sa;Password=Qwert@12345"
+    "DefaultConnection": "Server=127.0.0.1,1433;Database=techlanches;User=sa;Password=Qwert@12345"
   },
   "Logging": {
     "LogLevel": {
