--- a/src/TechLanches/Adapter/Driver/TechLanches.API/TechLanches.API.csproj
+++ b/src/TechLanches/Adapter/Driver/TechLanches.API/TechLanches.API.csproj
@@ -20,8 +20,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TechLanches.Application\TechLanches.Application.csproj" />
-    <ProjectReference Include="..\TechLanches.Infrastructure\TechLanches.Infrastructure.csproj" />
+    <ProjectReference Include="..\..\..\Core\TechLanches.Application\TechLanches.Application.csproj" />
+    <ProjectReference Include="..\..\Driven\TechLanches.Infrastructure\TechLanches.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
