--- a/src/TechLanches/Tests/TechLanches.UnitTests/TechLanches.UnitTests.csproj
+++ b/src/TechLanches/Tests/TechLanches.UnitTests/TechLanches.UnitTests.csproj
@@ -25,9 +25,11 @@
 
   <ItemGroup>
 
-    <ProjectReference Include="..\TechLanches.Application\TechLanches.Application.csproj" />
-    <ProjectReference Include="..\TechLanches.Core\TechLanches.Core.csproj" />
-    <ProjectReference Include="..\TechLanches.Domain\TechLanches.Domain.csproj" />
+    <ProjectReference Include="..\..\Core\TechLanches.Application\TechLanches.Application.csproj" />
+
+    <ProjectReference Include="..\..\Core\TechLanches.Core\TechLanches.Core.csproj" />
+
+    <ProjectReference Include="..\..\Core\TechLanches.Domain\TechLanches.Domain.csproj" />
   </ItemGroup>
 
 </Project>
