alteração projeto infra

--- a/src/TechLanches/Adapter/Driven/TechLanches.Adapter.SqlServer/TechLanches.Adapter.SqlServer.csproj
+++ b/src/TechLanches/Adapter/Driven/TechLanches.Adapter.SqlServer/TechLanches.Adapter.SqlServer.csproj
@@ -21,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Core\TechLanches.Application\TechLanches.Application.csproj" />
     <ProjectReference Include="..\..\..\Core\TechLanches.Core\TechLanches.Core.csproj" />
     <ProjectReference Include="..\..\..\Core\TechLanches.Domain\TechLanches.Domain.csproj" />
   </ItemGroup>
