--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,23 @@ services:
   webapi:
     build:
         context: ./src/TechLanches/
-        dockerfile: Dockerfile
+        dockerfile: Dockerfile.API
     container_name: api-dotnet6
     ports:
       - "5050:80"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ConnectionStrings__DefaultConnection=Server=db;Database=techlanches;User=sa;Password=Qwert@12345
+    networks:
+      - techlanches-network
+    depends_on:
+      - db
+
+  worker:
+    build:
+        context: ./src/TechLanches/
+        dockerfile: Dockerfile.Worker
+    container_name: worker-dotnet6
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ConnectionStrings__DefaultConnection=Server=db;Database=techlanches;User=sa;Password=Qwert@12345
