--- a/src/TechLanches/Dockerfile.Worker
+++ b/src/TechLanches/Dockerfile.Worker
@@ -1,10 +1,10 @@
-#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
 FROM mcr.microsoft.com/dotnet/runtime:6.0 AS base
 WORKDIR /app
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
+COPY ["Adapter/Driven/TechLanches.Adapter.SqlServer/TechLanches.Adapter.SqlServer.csproj", "TechLanches.Adapter.SqlServer/"]
+COPY ["Core/TechLanches.Application/TechLanches.Application.csproj", "TechLanches.Application/"]
 COPY ["Adapter/Driver/TechLanches.Adapter.FilaPedidos/TechLanches.Adapter.FilaPedidos.csproj", "Adapter/Driver/TechLanches.Adapter.FilaPedidos/"]
 RUN dotnet restore "Adapter/Driver/TechLanches.Adapter.FilaPedidos/TechLanches.Adapter.FilaPedidos.csproj"
 COPY . .
