add testes unitários para fila pedidos worker e service

--- a/test/TechLanches.UnitTests/TechLanches.UnitTests.csproj
+++ b/test/TechLanches.UnitTests/TechLanches.UnitTests.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\TechLanches\Adapter\Driver\TechLanches.Adapter.FilaPedidos\TechLanches.Adapter.FilaPedidos.csproj" />
     <ProjectReference Include="..\..\src\TechLanches\Core\TechLanches.Application\TechLanches.Application.csproj" />
     <ProjectReference Include="..\..\src\TechLanches\Core\TechLanches.Core\TechLanches.Core.csproj" />
     <ProjectReference Include="..\..\src\TechLanches\Core\TechLanches.Domain\TechLanches.Domain.csproj" />
