--- a/src/TechLanches/Adapter/Driver/TechLanches.Adapter.FilaPedidos/appsettings.json
+++ b/src/TechLanches/Adapter/Driver/TechLanches.Adapter.FilaPedidos/appsettings.json
@@ -3,8 +3,8 @@
     "DefaultConnection": "Server=127.0.0.1,1433;Database=techlanches;User=sa;Password=Qwert@12345"
   },
   "Worker": {
-    "DelayPreparacaoPedido": 20,
-    "DelayVerificacaoFila": 5
+    "DelayPreparacaoPedidoEmSegundos": 20,
+    "DelayVerificacaoFilaEmSegundos": 5
   },
   "Logging": {
     "LogLevel": {
