--- a/src/TechLanches/Dockerfile.API
+++ b/src/TechLanches/Dockerfile.API
@@ -4,20 +4,20 @@ EXPOSE 80
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
-COPY ["Adapter/Driver/TechLanches.API/TechLanches.API.csproj", "TechLanches.API/"]
+COPY ["Adapter/Driver/TechLanches.Adapter.API/TechLanches.Adapter.API.csproj", "TechLanches.Adapter.API/"]
 COPY ["Adapter/Driven/TechLanches.Adapter.SqlServer/TechLanches.Adapter.SqlServer.csproj", "TechLanches.Adapter.SqlServer/"]
 COPY ["Core/TechLanches.Domain/TechLanches.Domain.csproj", "TechLanches.Domain/"]
 COPY ["Core/TechLanches.Core/TechLanches.Core.csproj", "TechLanches.Core/"]
 COPY ["Core/TechLanches.Application/TechLanches.Application.csproj", "TechLanches.Application/"]
-RUN dotnet restore "TechLanches.API/TechLanches.API.csproj"
+RUN dotnet restore "TechLanches.Adapter.API/TechLanches.Adapter.API.csproj"
 COPY . .
-WORKDIR "/src/Adapter/Driver/TechLanches.API"
-RUN dotnet build "TechLanches.API.csproj" -c Release -o /app/build
+WORKDIR "/src/Adapter/Driver/TechLanches.Adapter.API"
+RUN dotnet build "TechLanches.Adapter.API.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "TechLanches.API.csproj" -c Release -o /app/publish
+RUN dotnet publish "TechLanches.Adapter.API.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "TechLanches.API.dll"]
+ENTRYPOINT ["dotnet", "TechLanches.Adapter.API.dll"]
