Documentação do swagger e ajuste no retorno dos endpoints.

--- a/src/TechLanches/Core/TechLanches.Application/TechLanches.Application.csproj
+++ b/src/TechLanches/Core/TechLanches.Application/TechLanches.Application.csproj
@@ -13,5 +13,8 @@
   <ItemGroup>
     <ProjectReference Include="..\TechLanches.Domain\TechLanches.Domain.csproj" />
   </ItemGroup>
+	<PropertyGroup>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+	</PropertyGroup>
 
 </Project>
