--- a/src/TechLanches/Adapter/Driven/TechLanches.Adapter.SqlServer/TechLanches.Adapter.SqlServer.csproj
+++ b/src/TechLanches/Adapter/Driven/TechLanches.Adapter.SqlServer/TechLanches.Adapter.SqlServer.csproj
@@ -27,4 +27,8 @@
     <ProjectReference Include="..\..\..\Core\TechLanches.Domain\TechLanches.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
