--- a/src/TechLanches/Adapter/Driver/TechLanches.Adapter.API/TechLanches.Adapter.API.csproj
+++ b/src/TechLanches/Adapter/Driver/TechLanches.Adapter.API/TechLanches.Adapter.API.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.ReDoc" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
