Melhorias no SwaggerUI + inclusão do logo,

--- a/src/TechLanches/Core/TechLanches.Application/TechLanches.Application.csproj
+++ b/src/TechLanches/Core/TechLanches.Application/TechLanches.Application.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 	<PropertyGroup>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<NoWarn>$(NoWarn);1591</NoWarn>
 	</PropertyGroup>
 
 </Project>
