--- a/src/TechLanches/Adapter/Driver/TechLanches.Adapter.API/TechLanches.Adapter.API.csproj
+++ b/src/TechLanches/Adapter/Driver/TechLanches.Adapter.API/TechLanches.Adapter.API.csproj
@@ -27,8 +27,14 @@
     <ProjectReference Include="..\..\Driven\TechLanches.Adapter.SqlServer\TechLanches.Adapter.SqlServer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="wwwroot\SwaggerUI\css\swagger-ui.css" />
+    <None Include="wwwroot\SwaggerUI\js\swagger-ui.js" />
+  </ItemGroup>
+
     <PropertyGroup>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<NoWarn>$(NoWarn);1591</NoWarn>
 	</PropertyGroup>
 
 </Project>
