criação camada acl e serviço mocado de pagamento

--- a/src/TechLanches/Core/TechLanches.Application/TechLanches.Application.csproj
+++ b/src/TechLanches/Core/TechLanches.Application/TechLanches.Application.csproj
@@ -7,10 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Mapster" Version="6.5.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Adapter\Driven\TechLanches.Adapter.ACL.Pagamento.QrCode\TechLanches.Adapter.ACL.Pagamento.QrCode.csproj" />
     <ProjectReference Include="..\TechLanches.Domain\TechLanches.Domain.csproj" />
   </ItemGroup>
 	<PropertyGroup>
