melhorias nos arquivos yaml + statefulset do banco funcional

--- a/k8s/techlanches-secrets.yaml
+++ b/k8s/techlanches-secrets.yaml
@@ -6,4 +6,5 @@ metadata:
   namespace: techlanches
 type: Opaque
 data:
-  DefaultConnection: <base64-encoded-connection-string>
+  DefaultConnection: U2VydmVyPWRiO0RhdGFiYXNlPXRlY2hsYW5jaGVzO1VzZXI9c2E7UGFzc3dvcmQ9UXdlcnRAMTIzNDU=
+  SA_PASSWORD: UXdlcnR5QDEyMzQ1 # Qwerty@12345
