--- a/.github/workflows/docker-publish-api-develop.yml
+++ b/.github/workflows/docker-publish-api-develop.yml
@@ -23,7 +23,7 @@ jobs:
       run: |
         docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD 
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag ${{secrets.DOCKER_USERNAME}}/techlanches-api:develop
+      run: docker build . --file ./src/TechLanches/Dockerfile.API --tag ${{secrets.DOCKER_USERNAME}}/techlanches-api:develop
       
     - name: Docker Push
       run: docker push ${{secrets.DOCKER_USERNAME}}/techlanches-api
