--- a/.github/workflows/docker-publish-api-develop.yml
+++ b/.github/workflows/docker-publish-api-develop.yml
@@ -23,7 +23,9 @@ jobs:
       run: |
         docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD 
     - name: Build the Docker image
-      run: docker build . --file ./src/TechLanches/Dockerfile.API --tag ${{secrets.DOCKER_USERNAME}}/techlanches-api:develop
+      run: |
+        cd src/TechLanches
+        docker build -f Dockerfile.API -t techlanches-api-image:develop . --no-cache
       
     - name: Docker Push
       run: docker push ${{secrets.DOCKER_USERNAME}}/techlanches-api
