--- a/.github/workflows/docker-publish-api-develop.yml
+++ b/.github/workflows/docker-publish-api-develop.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Build the Docker image
       run: |
         cd src/TechLanches
-        docker build -f Dockerfile.API -t techlanches-api-image:develop . --no-cache
+        docker build -f Dockerfile.API -t techlanches-api:develop . --no-cache
       
     - name: Docker Push
       run: docker push ${{secrets.DOCKER_USERNAME}}/techlanches-api
