--- a/.github/workflows/docker-publish-api-develop.yml
+++ b/.github/workflows/docker-publish-api-develop.yml
@@ -28,4 +28,6 @@ jobs:
         docker build -f Dockerfile.API -t techlanches-api:develop . --no-cache
       
     - name: Docker Push
-      run: docker push g124soat/techlanches-api:develop
+      run: |
+        docker tag techlanches-api:develop techlanches-api:develop
+        docker push g124soat/techlanches-api:develop
