--- a/.github/workflows/docker-publish-api-develop.yml
+++ b/.github/workflows/docker-publish-api-develop.yml
@@ -25,9 +25,7 @@ jobs:
     - name: Build the Docker image
       run: |
         cd src/TechLanches
-        docker build -f Dockerfile.API -t techlanches-api:develop . --no-cache
+        docker build -f Dockerfile.API -t g124soat/techlanches-api:develop . --no-cache
       
     - name: Docker Push
-      run: |
-        docker tag techlanches-api:develop techlanches-api:develop
-        docker push g124soat/techlanches-api:develop
+      run: docker push g124soat/techlanches-api:develop
