--- a/k8s/techlanches-secrets.yaml
+++ b/k8s/techlanches-secrets.yaml
@@ -6,5 +6,8 @@ metadata:
   namespace: techlanches
 type: Opaque
 data:
-  DefaultConnection: U2VydmVyPWRiO0RhdGFiYXNlPXRlY2hsYW5jaGVzO1VzZXI9c2E7UGFzc3dvcmQ9UXdlcnRAMTIzNDU=
+  #DefaultConnection: U2VydmVyPXRlY2hsYW5jaGVzLXNxbC0wLDE0MzM7RGF0YWJhc2U9dGVjaGxhbmNoZXM7VXNlcj1zYTtQYXNzd29yZD1Rd2VydEAxMjM0NQ==
+  #DefaultConnection: U2VydmVyPTEyNy4wLjAuMSwxNDMzO0RhdGFiYXNlPXRlY2hsYW5jaGVzO1VzZXI9c2E7UGFzc3dvcmQ9UXdlcnRAMTIzNDU=
+  #DefaultConnection: U2VydmVyPXRlY2hsYW5jaGVzLXNxbC1zZXJ2aWNlO0RhdGFiYXNlPXRlY2hsYW5jaGVzO1VzZXI9c2E7UGFzc3dvcmQ9UXdlcnRAMTIzNDU=
+  DefaultConnection: U2VydmVyPXRlY2hsYW5jaGVzLXNxbC1zZXJ2aWNlLDE0MzM7RGF0YWJhc2U9dGVjaGxhbmNoZXM7VXNlcj1zYTtQYXNzd29yZD1Rd2VydEAxMjM0NQ==
   SA_PASSWORD: UXdlcnR5QDEyMzQ1 # Qwerty@12345
