--- a/.github/workflows/docker-publish-api-develop.yml
+++ b/.github/workflows/docker-publish-api-develop.yml
@@ -15,17 +15,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: docker login
-      env:
-        DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
-        DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-      run: |
-        docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD 
-    - name: Build the Docker image
-      run: |
-        cd src/TechLanches
-        docker build -f Dockerfile.API -t g124soat/techlanches-api:develop . --no-cache
-      
-    - name: Docker Push
-      run: docker push g124soat/techlanches-api:develop
+      - uses: actions/checkout@v2
+      - name: docker login
+        env:
+          DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
+          DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
+        run: |
+          docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD 
+      - name: Build the Docker image
+        run: |
+          cd src/TechLanches
+          docker build -f Dockerfile.API -t ${{secrets.DOCKER_USERNAME}}/techlanches-api:develop . --no-cache
+        
+      - name: Docker Push
+        run: docker push ${{secrets.DOCKER_USERNAME}}/techlanches-api:develop
