--- a/k8s/deployments/techlanches-api-deployment.yaml
+++ b/k8s/deployments/techlanches-api-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: techlanches-api
-          image: g124soat/techlanches-api:develop
+          image: g124soat/techlanches-api:1.0.1
           ports:
             - containerPort: 5050
           env:
