--- a/src/TechLanches/Adapter/Driver/TechLanches.Adapter.API/appsettings.Production.json
+++ b/src/TechLanches/Adapter/Driver/TechLanches.Adapter.API/appsettings.Production.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=techlanches-sql-service;user id=sa;password=Qwerty@12345;database=techlanches;trustServerCertificate=true;"
+    "DefaultConnection": ""
   },
   "Logging": {
     "LogLevel": {
