--- a/k8s/deployments/techlanches-api-deployment.yaml
+++ b/k8s/deployments/techlanches-api-deployment.yaml
@@ -16,17 +16,17 @@ spec:
     spec:
       containers:
         - name: techlanches-api
-          image: g124soat/techlanches-api:1.0.3
+          image: g124soat/techlanches-api:1.0.5
           ports:
             - containerPort: 80
           env:
             - name: ASPNETCORE_ENVIRONMENT
-              value: Production
-            - name: DefaultConnection
-              valueFrom:
-                secretKeyRef:
-                  name: techlanches-secrets
-                  key: DefaultConnection
+              value: "Production"
+            # - name: ConnectionStrings__DefaultConnection
+            #   valueFrom:
+            #     secretKeyRef:
+            #       name: techlanches-secrets
+            #       key: DefaultConnection
 
 ---
 apiVersion: v1
