--- a/src/TechLanches/Adapter/Driver/TechLanches.Adapter.API/appsettings.Production.json
+++ b/src/TechLanches/Adapter/Driver/TechLanches.Adapter.API/appsettings.Production.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=techlanches-sql-service;Initial Catalog=techlanches;User Id=sa;Password=Qwert@12345;"
+    "DefaultConnection": "Server=techlanches-sql-service;Initial Catalog=techlanches;User Id=sa;Password=Qwert@12345;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
