test env variables

--- a/src/TechLanches/Adapter/Driver/TechLanches.Adapter.API/appsettings.Production.json
+++ b/src/TechLanches/Adapter/Driver/TechLanches.Adapter.API/appsettings.Production.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=techlanches-sql-service;Initial Catalog=techlanches;User Id=sa;Password=Qwert@12345;TrustServerCertificate=True"
+    "DefaultConnection": "server=techlanches-sql-service;user id=sa;password=Qwerty@12345;database=techlanches;trustServerCertificate=true;"
   },
   "Logging": {
     "LogLevel": {
