--- a/k8s/deployments/techlanches-api-deployment.yaml
+++ b/k8s/deployments/techlanches-api-deployment.yaml
@@ -16,12 +16,14 @@ spec:
     spec:
       containers:
         - name: techlanches-api
-          image: g124soat/techlanches-api:1.0.6
+          image: g124soat/techlanches-api:1.0.7
           ports:
             - containerPort: 80
           env:
             - name: ASPNETCORE_ENVIRONMENT
               value: "Production"
+            - name: DefaultConnection
+              value: "Test"
             # - name: ConnectionStrings__DefaultConnection
             #   valueFrom:
             #     secretKeyRef:
