--- a/.github/workflows/docker-publish-api.yml
+++ b/.github/workflows/docker-publish-api.yml
@@ -21,11 +21,12 @@ jobs:
           DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
           DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
         run: |
-          docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-      - name: Build the Docker image
+          docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD 
+      - name: Build and Push Docker image
         run: |
           cd src/TechLanches
-          docker build -f Dockerfile.API -t ${{secrets.DOCKER_USERNAME}}/techlanches-api:latest -t ${{secrets.DOCKER_USERNAME}}/techlanches-api:develop . --no-cache
-
-      - name: Docker Push
-        run: docker push ${{secrets.DOCKER_USERNAME}}/techlanches-api
+          TAG=$(date +%Y%m%d%H%M%S)
+          docker build -f Dockerfile.API -t ${{secrets.DOCKER_USERNAME}}/techlanches-api:latest -t ${{secrets.DOCKER_USERNAME}}/techlanches-api:$TAG -t ${{secrets.DOCKER_USERNAME}}/techlanches-api:develop . --no-cache
+          docker push ${{secrets.DOCKER_USERNAME}}/techlanches-api:$TAG
+          docker push ${{secrets.DOCKER_USERNAME}}/techlanches-api:develop
+          docker push ${{secrets.DOCKER_USERNAME}}/techlanches-api:latest
