--- a/.github/workflows/docker-publish-worker.yml
+++ b/.github/workflows/docker-publish-worker.yml
@@ -1,11 +1,11 @@
-name: API Docker Publish Develop
+name: Worker Docker Publish
 
 on:
   push:
     branches:
-      - develop
+      - main
   workflow_run:
-    workflows: ["Build API Docker Image"]
+    workflows: ["Build Worker Docker Image"]
     types:
       - completed
   workflow_dispatch:
@@ -26,6 +26,7 @@ jobs:
         run: |
           cd src/TechLanches
           TAG=$(date +%Y%m%d%H%M%S)
-          docker build -f Dockerfile.API -t ${{secrets.DOCKER_USERNAME}}/techlanches-api:$TAG -t ${{secrets.DOCKER_USERNAME}}/techlanches-api:develop . --no-cache
-          docker push ${{secrets.DOCKER_USERNAME}}/techlanches-api:$TAG
-          docker push ${{secrets.DOCKER_USERNAME}}/techlanches-api:develop
+          docker build -f Dockerfile.Worker -t ${{secrets.DOCKER_USERNAME}}/techlanches-worker:latest -t ${{secrets.DOCKER_USERNAME}}/techlanches-worker:$TAG -t ${{secrets.DOCKER_USERNAME}}/techlanches-worker:develop . --no-cache
+          docker push ${{secrets.DOCKER_USERNAME}}/techlanches-worker:$TAG
+          docker push ${{secrets.DOCKER_USERNAME}}/techlanches-worker:develop
+          docker push ${{secrets.DOCKER_USERNAME}}/techlanches-worker:latest
