--- a/k8s/deployments/techlanches-api-deployment.yaml
+++ b/k8s/deployments/techlanches-api-deployment.yaml
@@ -1,5 +1,5 @@
 # techlanches-api-deployment.yaml
-apiVersion: apps/v1
+apiVersion: v1
 kind: Deployment
 metadata:
   name: techlanches-api
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: techlanches-api
-          image: g124soat/techlanches-api:1.0.7
+          image: g124soat/techlanches-api:develop # usar latest quando for pra main
           ports:
             - containerPort: 80
           env:
@@ -39,6 +39,6 @@ spec:
     app: techlanches-api
   ports:
     - protocol: TCP
-      port: 80
+      port: 5050
       targetPort: 80
   type: LoadBalancer
