--- a/k8s/deployments/techlanches-sql-deployment.yaml
+++ b/k8s/deployments/techlanches-sql-deployment.yaml
@@ -21,19 +21,15 @@ spec:
         ports:
         - containerPort: 1433
         env:
-        # - name: SA_PASSWORD
-        #   valueFrom:
-        #     secretKeyRef:
-        #       name: techlanches-secrets
-        #       key: SA_PASSWORD
-        # - name: ACCEPT_EULA
-        #   value: "Y"
+        - name: SA_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: techlanches-secrets
+              key: SA_PASSWORD
         - name: ACCEPT_EULA
           value: "Y"
         - name: MSSQL_PID
           value: Developer
-        - name: SA_PASSWORD
-          value: Qwerty@12345
   volumeClaimTemplates:
   - metadata:
       name: mssql-data
@@ -54,22 +50,6 @@ spec:
   ports:
   - name: techlanches-sql
     port: 1433
-    targetPort: 1433
-  selector:
-    app: techlanches-sql
-  type: NodePort
-
----
-# techlanches-sql-service.yaml
-apiVersion: v1
-kind: Service
-metadata:
-  name: techlanches-sql-service-lb
-  namespace: techlanches
-spec:
-  ports:
-  - name: techlanches-sql
-    port: 1444
     targetPort: 1433
   selector:
     app: techlanches-sql
