--- a/k8s/hpas/techlanches-worker-hpa.yaml
+++ b/k8s/hpas/techlanches-worker-hpa.yaml
@@ -1,5 +1,5 @@
 # techlanches-worker-hpa.yaml
-apiVersion: autoscaling/v2beta2
+apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: techlanches-worker-hpa
