--- a/src/TechLanches/Core/TechLanches.Application/TechLanches.Application.csproj
+++ b/src/TechLanches/Core/TechLanches.Application/TechLanches.Application.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="Mapster" Version="6.5.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="QRCoder" Version="1.4.2" />
+    <PackageReference Include="System.Drawing.Common" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
