adicionando health check da api

--- a/src/TechLanches/Adapter/Driver/TechLanches.Adapter.API/appsettings.Development.json
+++ b/src/TechLanches/Adapter/Driver/TechLanches.Adapter.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1,1433;Database=techlanches;User=sa;Password=Qwert@12345"
+    "DefaultConnection": "Server=127.0.0.1,1433;Database=techlanches;User=sa;Password=Qwert@12345;TrustServerCertificate=true;"
   },
   "Logging": {
     "LogLevel": {
