adição healthcheck worker e config de probes nos arquivos k8s

--- a/k8s/deployments/techlanches-api-deployment.yaml
+++ b/k8s/deployments/techlanches-api-deployment.yaml
@@ -27,6 +27,20 @@ spec:
                 secretKeyRef:
                   name: techlanches-secrets
                   key: DefaultConnection
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 80
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            timeoutSeconds: 5
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: 80
+            initialDelaySeconds: 20
+            periodSeconds: 5
+            timeoutSeconds: 3
 
 ---
 apiVersion: v1
