--- a/src/TechLanches/Adapter/Driver/TechLanches.Adapter.FilaPedidos/TechLanches.Adapter.FilaPedidos.csproj
+++ b/src/TechLanches/Adapter/Driver/TechLanches.Adapter.FilaPedidos/TechLanches.Adapter.FilaPedidos.csproj
@@ -10,6 +10,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNetCore.HealthChecks.SqlServer" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.4" />
   </ItemGroup>
