--- a/src/TechLanches/Adapter/Driver/TechLanches.Adapter.FilaPedidos/appsettings.json
+++ b/src/TechLanches/Adapter/Driver/TechLanches.Adapter.FilaPedidos/appsettings.json
@@ -1,10 +1,13 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1,1433;Database=techlanches;User=sa;Password=Qwert@12345"
+    "DefaultConnection": "Server=127.0.0.1,1433;Database=techlanches;User=sa;Password=Qwert@12345;TrustServerCertificate=true;"
   },
   "Worker": {
     "DelayPreparacaoPedidoEmSegundos": 20,
     "DelayVerificacaoFilaEmSegundos": 5
+  },
+  "HealthProbe": {
+    "TcpPort": 5000
   },
   "Logging": {
     "LogLevel": {
