--- a/src/TechLanches/Adapter/Driver/TechLanches.Adapter.API/TechLanches.Adapter.API.csproj
+++ b/src/TechLanches/Adapter/Driver/TechLanches.Adapter.API/TechLanches.Adapter.API.csproj
@@ -34,7 +34,7 @@
 
     <PropertyGroup>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
-		<NoWarn>$(NoWarn);1591</NoWarn>
+		<NoWarn>$(NoWarn);1591;8306</NoWarn>
 	</PropertyGroup>
 
 </Project>
