--- a/src/TechLanches/Core/TechLanches.Core/TechLanches.Core.csproj
+++ b/src/TechLanches/Core/TechLanches.Core/TechLanches.Core.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <NoWarn>$(NoWarn);8618;8765;8602;8603;8604</NoWarn>
   </PropertyGroup>
 
 </Project>
