--- a/k8s/deployments/techlanches-api-deployment.yaml
+++ b/k8s/deployments/techlanches-api-deployment.yaml
@@ -19,6 +19,13 @@ spec:
           image: g124soat/techlanches-api:develop # usar latest quando for pra main
           ports:
             - containerPort: 80
+          resources:
+            requests:
+              cpu: "500m"
+              memory: "100Mi"
+            # limits: 
+            #   cpu: "1"
+            #   memory: "300Mi" Removi para testar o HPA... Validar se deve ser usado no futuro.
           env:
             - name: ASPNETCORE_ENVIRONMENT
               value: "Production"
