--- a/k8s/deployments/techlanches-worker-deployment.yaml
+++ b/k8s/deployments/techlanches-worker-deployment.yaml
@@ -19,6 +19,13 @@ spec:
           image: g124soat/techlanches-worker:develop # usar latest quando for pra main
           ports:
             - containerPort: 5060
+          resources:
+            requests:
+              cpu: "500m"
+              memory: "100Mi"
+            limits: 
+              cpu: "1"
+              memory: "300Mi"
           env:
             - name: ASPNETCORE_ENVIRONMENT
               value: "Production"
