--- a/k8s/hpas/techlanches-api-hpa.yaml
+++ b/k8s/hpas/techlanches-api-hpa.yaml
@@ -10,7 +10,7 @@ spec:
     kind: Deployment
     name: techlanches-api
   minReplicas: 1
-  maxReplicas: 5
+  maxReplicas: 10
   metrics:
     - type: Resource
       resource:
@@ -23,4 +23,7 @@ spec:
         name: memory
         target:
           type: Utilization
-          averageUtilization: 50
+          averageUtilization: 50 
+  behavior:
+   scaleDown:
+    stabilizationWindowSeconds: 30
