--- a/src/TechLanches/Adapter/Driver/TechLanches.Adapter.API/appsettings.json
+++ b/src/TechLanches/Adapter/Driver/TechLanches.Adapter.API/appsettings.json
@@ -1,10 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1,1433;Database=techlanches;User=sa;Password=Qwert@12345"
-  },
-  "ApiMercadoPago": {
-    "BaseUrl": "https://api.mercadopago.com/",
-    "AccessToken": "TEST-5776071198954261-110816-77bd607ae8d9f6dda9132705d9dc82c2-1541992700"
+    "DefaultConnection": "Server=127.0.0.1,1433;Database=techlanches;User=sa;Password=Qwert@12345",
+    "DeployedEnvironment": "Dev"
   },
   "Logging": {
     "LogLevel": {
