--- a/src/TechLanches/Adapter/Driven/TechLanches.Adapter.ACL.Pagamento.QrCode/TechLanches.Adapter.ACL.Pagamento.QrCode.csproj
+++ b/src/TechLanches/Adapter/Driven/TechLanches.Adapter.ACL.Pagamento.QrCode/TechLanches.Adapter.ACL.Pagamento.QrCode.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <NoWarn>$(NoWarn);8618;8603</NoWarn>
+    <NoWarn>$(NoWarn);8618;8601;8602;8603</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
