corrigindo problemas de versão da imagem

--- a/k8s/deployments/techlanches-worker-deployment.yaml
+++ b/k8s/deployments/techlanches-worker-deployment.yaml
@@ -17,6 +17,7 @@ spec:
       containers:
         - name: techlanches-worker
           image: g124soat/techlanches-worker:develop # usar latest quando for pra main
+          imagePullPolicy: Always
           resources:
             requests:
               cpu: "500m"
