--- a/k8s/deployments/techlanches-api-deployment.yaml
+++ b/k8s/deployments/techlanches-api-deployment.yaml
@@ -17,6 +17,7 @@ spec:
       containers:
         - name: techlanches-api
           image: g124soat/techlanches-api:develop # usar latest quando for pra main
+          imagePullPolicy: Always
           ports:
             - containerPort: 80
           resources:
