--- a/k8s/deployments/techlanches-sql-deployment.yaml
+++ b/k8s/deployments/techlanches-sql-deployment.yaml
@@ -18,6 +18,7 @@ spec:
       containers:
       - name: sql-server
         image: mcr.microsoft.com/mssql/server:2019-latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 1433
         env:
