--- a/src/TechLanches/Adapter/Driver/TechLanches.Adapter.FilaPedidos/TechLanches.Adapter.FilaPedidos.csproj
+++ b/src/TechLanches/Adapter/Driver/TechLanches.Adapter.FilaPedidos/TechLanches.Adapter.FilaPedidos.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.4" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
   </ItemGroup>
 
   <ItemGroup>
