--- a/src/TechLanches/Adapter/Driver/TechLanches.Adapter.API/TechLanches.Adapter.API.csproj
+++ b/src/TechLanches/Adapter/Driver/TechLanches.Adapter.API/TechLanches.Adapter.API.csproj
@@ -28,6 +28,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Core\TechLanches.Application\TechLanches.Application.csproj" />
+    <ProjectReference Include="..\..\..\TechLanches.Adapter.RabbitMq\TechLanches.Adapter.RabbitMq.csproj" />
     <ProjectReference Include="..\..\Driven\TechLanches.Adapter.SqlServer\TechLanches.Adapter.SqlServer.csproj" />
   </ItemGroup>
 
