--- a/k8s/techlanches-secrets.yaml
+++ b/k8s/techlanches-secrets.yaml
@@ -8,3 +8,5 @@ type: Opaque
 data:
   DefaultConnection: c2VydmVyPXRlY2hsYW5jaGVzLXNxbC1zZXJ2aWNlO3VzZXIgaWQ9c2E7cGFzc3dvcmQ9UXdlcnR5QDEyMzQ1O2RhdGFiYXNlPXRlY2hsYW5jaGVzO3RydXN0U2VydmVyQ2VydGlmaWNhdGU9dHJ1ZTs=
   SA_PASSWORD: UXdlcnR5QDEyMzQ1 # Qwerty@12345
+  RABBITMQ_DEFAULT_USER: cmFiYml0 # rabbit
+  RABBITMQ_DEFAULT_PASS: cmFiYml0cGFzc3dvcmQ= # rabbitpassword
