--- a/src/TechLanches/Adapter/Driver/TechLanches.Adapter.API/appsettings.Development.json
+++ b/src/TechLanches/Adapter/Driver/TechLanches.Adapter.API/appsettings.Development.json
@@ -3,22 +3,18 @@
     "DefaultConnection": "Server=127.0.0.1,1433;Database=techlanches;User=sa;Password=Qwerty@12345;TrustServerCertificate=true;"
   },
   "ApiMercadoPago": {
-    "Dev": {
       "BaseUrl": "https://api.mercadopago.com/",
       "AccessToken": "TEST-5776071198954261-110816-77bd607ae8d9f6dda9132705d9dc82c2-1541992700",
       "ExternalReference": "order-id-1234",
       "PosId": "SUC001",
       "UserId": "1541992700",
       "MerchantOrders": "1d500ba2-ae69-442f-9f30-ccf22955b11f"
-    },
-    "Prod": {
-      "BaseUrl": "https://api.mercadopago.com/",
-      "AccessToken": "TEST-5776071198954261-110816-77bd607ae8d9f6dda9132705d9dc82c2-1541992700",
-      "ExternalReference": "order-id-1234",
-      "PosId": "SUC001",
-      "UserId": "1541992700",
-      "MerchantOrders": "1d500ba2-ae69-442f-9f30-ccf22955b11f"
-    }
+  },
+  "RabbitMQ": {
+    "Host": "localhost",
+    "User": "rabbit",
+    "Password": "rabbitpassword",
+    "Queue": "pedidos"
   },
   "Logging": {
     "LogLevel": {
