--- a/src/TechLanches/Adapter/Driver/TechLanches.Adapter.FilaPedidos/appsettings.json
+++ b/src/TechLanches/Adapter/Driver/TechLanches.Adapter.FilaPedidos/appsettings.json
@@ -9,6 +9,12 @@
   "HealthProbe": {
     "TcpPort": 5000
   },
+  "RabbitMQ": {
+    "Host": "localhost",
+    "User": "rabbit",
+    "Password": "rabbitpassword",
+    "Queue": "pedidos"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
