--- a/src/TechLanches/Adapter/Driver/TechLanches.Adapter.API/appsettings.Production.json
+++ b/src/TechLanches/Adapter/Driver/TechLanches.Adapter.API/appsettings.Production.json
@@ -14,7 +14,7 @@
     "Host": "localhost",
     "User": "rabbit",
     "Password": "rabbitpassword",
-    "Queue": "pedidos"
+    "Queue": "filapedidos"
   },
   "Logging": {
     "LogLevel": {
