--- a/src/TechLanches/Adapter/Driver/TechLanches.Adapter.API/appsettings.Production.json
+++ b/src/TechLanches/Adapter/Driver/TechLanches.Adapter.API/appsettings.Production.json
@@ -11,7 +11,7 @@
       "MerchantOrders": "1d500ba2-ae69-442f-9f30-ccf22955b11f"
   },
   "RabbitMQ": {
-    "Host": "localhost",
+    "Host": "rabbitmq",
     "User": "rabbit",
     "Password": "rabbitpassword",
     "Queue": "filapedidos"
