Image para latest

--- a/k8s/deployments/techlanches-worker-deployment.yaml
+++ b/k8s/deployments/techlanches-worker-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: techlanches-worker
-          image: g124soat/techlanches-worker:develop
+          image: g124soat/techlanches-worker:latest
           imagePullPolicy: Always
           resources:
             requests:
