Alteração no YAML do docker publish

--- a/.github/workflows/docker-publish-api.yml
+++ b/.github/workflows/docker-publish-api.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           cd src/TechLanches
           TAG=$(date +%Y%m%d%H%M%S)
-          docker build -f Dockerfile.API -t ${{secrets.DOCKER_USERNAME}}/techlanches-api:latest -t ${{secrets.DOCKER_USERNAME}}/techlanches-api:$TAG -t ${{secrets.DOCKER_USERNAME}}/techlanches-api:develop . --no-cache
+          docker build -f Dockerfile.API -t ${{secrets.DOCKER_USERNAME}}/techlanches-api:latest . --no-cache
           docker push ${{secrets.DOCKER_USERNAME}}/techlanches-api:$TAG
           docker push ${{secrets.DOCKER_USERNAME}}/techlanches-api:develop
           docker push ${{secrets.DOCKER_USERNAME}}/techlanches-api:latest
