--- a/.github/workflows/build-tests.yml
+++ b/.github/workflows/build-tests.yml
@@ -32,3 +32,10 @@ jobs:
 
     - name: Test
       run: dotnet test test/**/*.csproj
+
+    - name: SonarCloud Scan
+      id: sonarcloud
+      uses: SonarSource/sonarcloud-github-action@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
