--- a/.github/workflows/build-tests.yml
+++ b/.github/workflows/build-tests.yml
@@ -37,5 +37,5 @@ jobs:
       id: sonarcloud
       uses: SonarSource/sonarcloud-github-action@v1
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GTH_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
